# derive-het

./: .gitignore  LICENSE  README.md  derive-het.cabal
examples/: Simple.hs
src/Derive/: Het.hs
test/: Simple.hs
test/Derive/: HetSpec.hs
