name:                derive-het
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/derive-het#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md
                     examples/*.hs

library
  hs-source-dirs:      src
  exposed-modules:
    Derive.Het
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , template-haskell

test-suite spec
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  other-modules:
    Derive.HetSpec
  main-is:             Spec.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && <5
                     , derive-het
                     , hspec == 2.*
